# Polar-CV-KAN

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CV-KAN idea.md  IMPLEMENTATION_PLAN.md  README.md  check_gpu.py  debug_local.py  explain_global.py  gpu_verification.py  pyproject.toml  quick_test.py  reproduce_collapse.py  requirements.txt
.agent/workflows/: add-module.md  log-finding.md  run-experiment.md  update-architecture.md  validate-code.md
docs/: CV-KAN idea.md  benchmarking_plan.md  comprehensive_benchmarking_plan.md  research_log.md  results_summary.md
docs/experiments/: image_optimization_log.md
experiments/: ablation_study.py  analyze_curves.py  arg_parser.py  benchmark_cifar10.py  check_experiment_status.py  compare_hierarchical.py  comparisons_summary.md  comprehensive_benchmark.py  comprehensive_benchmark_v2.py  overnight_benchmark.ps1  precompute_audio.py  remaining_experiments.txt  run_architecture_experiments.py  run_benchmark.py  run_diagnostics.py  run_remaining.py  summarize_results.py  summary_results.csv  sweep_sst2.py  train.py  train_audio.py  train_audio_precomputed.py  train_image.py  train_sst2.py  train_synthetic.py  train_timeseries.py  verify_baseline.py  visualize.py  visualize_sentiment.py
experiments/analysis/: __init__.py  analyze_curves.py  run_diagnostics.py  visualize.py
experiments/baselines/: __init__.py  base_trainer.py  cnn_audio_baseline.py  cnn_text_baseline.py  lstm_audio_baseline.py  lstm_baseline.py  lstm_text_baseline.py  mlp_mixer_baseline.py  nlp_baseline.py  resnet_baseline.py  tcn_baseline.py  transformer_audio_baseline.py  transformer_ts_baseline.py  vit_baseline.py
experiments/domains/: __init__.py  audio.py  image.py  nlp.py  sst2.py  synthetic.py  timeseries.py
experiments/utils/: check_baselines.py  param_counter.py  read_results.py  tune_params.py
research/: README.md  config.py  run_all.py
research/phase1_polarization/: README.md  __init__.py  extract_transforms.py  measure_polarization.py  single_block_analysis.py  synthetic_polarization.py
research/phase2_semantics/: README.md  __init__.py  mutual_information.py  phase_clustering.py  phase_intervention.py
research/phase3_complex_necessity/: README.md  __init__.py  real_cartesian_model.py  real_polar_model.py  run_ablations.py
research/phase4_kan_framing/: README.md  __init__.py  literature_notes.md
research/phase5_stability/: README.md  __init__.py  gradient_flow.py  magnitude_dynamics.py
research/phase6_robustness/: rotated_shapes.py  run_experiment.py
research/phase7_real_world/: mnist_loader.py  real_polar_baseline.py  run_mnist.py
research/phase8_nlp/: real_polar_nlp.py  run_imdb.py
research/universal/: experiment.py  loader.py  metrics.py
research/utils/: __init__.py  checkpoint_utils.py  metrics.py  visualization.py
scripts/: analyze_results.py  check_architecture.py  lint_architecture.py  run_research.py
src/: __init__.py  factories.py  registry.py  tracking.py  train.py  trainer.py  utils.py
src/configs/: __init__.py  model.py  presets.py  schema.py  training.py
src/data/: __init__.py  audio_data.py  image_data.py  image_extension.py  nlp_loader.py  precomputed_audio.py  synthetic.py  text.py  timeseries_data.py  timeseries_extension.py
src/losses/: __init__.py  regularizers.py
src/models/: __init__.py  backbone.py  base.py  baseline_transformer.py  cv_kan.py  cv_kan_audio.py  cv_kan_image.py  cv_kan_nlp.py  cv_kan_timeseries.py  normalization.py  protocols.py
src/modules/: __init__.py  aggregation.py  complex_norm.py  embeddings.py  gated_polarization.py  hierarchical.py  multi_head.py  multi_path_hierarchical.py  phase_attention.py  polarizing_block.py  pooling.py  positional_encoding.py
src/tracking/: __init__.py  experiment_tracker.py  hooks.py
tests/: conftest.py  test_edge_cases.py  test_factories.py  test_hierarchical.py  test_modules.py  test_multi_path.py  test_training.py
