[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polar-cv-kan"
version = "0.1.0"
description = "Polar Complex-Valued Kolmogorov-Arnold Networks for implicit attention via phase alignment and magnitude polarization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "requests>=2.28.0",
    "mlflow>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
]
cuda = [
    # Install torch separately with CUDA support via requirements.txt
    # This is a marker for documentation purposes
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    # Core
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear

    # Code quality
    "C4",   # flake8-comprehensions - simplify list/dict comprehensions
    "SIM",  # flake8-simplify - simplify code patterns
    "PIE",  # flake8-pie - miscellaneous lints for cleaner code
    "RET",  # flake8-return - check return statements
    "PTH",  # flake8-use-pathlib - prefer pathlib over os.path
    "PERF", # perflint - performance anti-patterns

    # Duplication & complexity
    "C90",  # mccabe complexity checker
    "PL",   # pylint subset (PLR for refactor, PLC for convention)

    # Documentation
    "D",    # pydocstyle - docstring conventions

    # Import hygiene
    "TID",  # flake8-tidy-imports - import restrictions

    # Type annotations
    "ANN",  # flake8-annotations - function annotation checks
]

ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function-call in default argument (common in PyTorch)
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
    "ANN101", # Missing type annotation for `self`
    "ANN102", # Missing type annotation for `cls`
    "ANN401", # Dynamically typed expressions (Any) are disallowed
    "PLR0913", # Too many arguments to function call (common in ML)
    "PLR2004", # Magic value used in comparison (common in ML configs)
]

# Complexity thresholds
[tool.ruff.lint.mccabe]
max-complexity = 15  # Flag functions with cyclomatic complexity > 15

[tool.ruff.lint.pylint]
max-args = 10         # Allow up to 10 function arguments (ML models need many)
max-branches = 15     # Maximum branches in a function
max-statements = 75   # Maximum statements per function

[tool.ruff.lint.isort]
known-first-party = ["src", "experiments"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
# Prevent importing from deprecated or internal modules
ban-relative-imports = "parents"  # Only allow relative imports from siblings/children

[tool.ruff.lint.per-file-ignores]
# Tests don't need docstrings or type annotations
"tests/*" = ["D", "ANN", "PLR"]
# Experiments can be more relaxed
"experiments/*" = ["D", "ANN"]
# Baseline scripts are simple entry points
"experiments/baselines/*" = ["D", "ANN", "PLR0915"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
